--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -90,7 +90,14 @@ section{
 		}
 	}
 	&.results{
+		padding: 2.2em 2.2em 0;
 		.header{background-image: url(/images/results_header.png);}
+	}
+	.pagination {
+		list-style-type: none;
+		li{
+			color:#fff;
+		}
 	}	
 }
 #footer {
@@ -98,6 +105,13 @@ section{
 	border-top: 1px solid #eeeeee;
 	padding-top: 30px;
 	color: #777777;
+}
+.modal-content{
+	background-color: #333;
+	button.close{
+		color:#fff;
+		
+	}
 }
 
 
@@ -140,12 +154,15 @@ section{
 }
 
 .result_social {
-	float: right;
 	background-color: #333;
 	height: 16px;
 	display:inline-block;
 	color: #fff;
-/* 	padding-left: 10px; */
+	a{
+		color: #fff;
+		padding-left:1.4em;
+		&:hover{text-decoration: none;}
+	}
 }
 
 .result_location {
@@ -175,6 +192,15 @@ section{
 
 .cmntcnt{
 	color: #555;
+}
+
+.results_pagination{
+	margin-top: 3.2em;
+	padding-left:0;
+	li{
+		display:inline-block;
+		a{color:#fff;}
+	}
 }
 
 /*-----------------------------------------------------------------------------------*/
@@ -242,8 +268,8 @@ section{
 
 
 .sclnav {
-    width: 80px; height: 16px;
-    margin: 10px auto; padding: 0;
+    width: 80px; height: 16px; 
+    padding: 0;
     position: relative;}
       
 .sclnav li {
