--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -70,7 +70,7 @@ html
 		//- FOOTER
 		.container: #footer
 
-			p &#169; 2012 5. things about yourself // website by Katrina Hess
+			p &#169; 2012 5. things about yourself
 
 
 		//- JAVASCRIPT
