--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -5,7 +5,7 @@ mixin submission-form(action)
 			.media-body
 				label(for='name' class="col-sm-2").form-label
 					| Name
-				input(name='name' type='text' class="col-sm-10" placeholder='We can be on a first name basis...').form-control
+				input(name='name' type='text' class="col-sm-9 col-sm-offset-1" placeholder='We can be on a first name basis...').form-control
 				br
 				p 
 					| Is this your real name?
@@ -18,15 +18,15 @@ mixin submission-form(action)
 				br
 				label(for='location' class="col-sm-2").form-label
 					| Where
-				input(name='location' type='text' class="col-sm-10" placeholder='City, State, Country').form-control
+				input(name='location' type='text' class="col-sm-9 col-sm-offset-1" placeholder='City, State, Country').form-control
 				br
 				label(for='age' class="col-sm-2").form-label
 					| Age
-				input(name='age' type='text' class="col-sm-10").form-control
+				input(name='age' type='text' class="col-sm-9 col-sm-offset-1").form-control
 				br
 				label(for='email' class="col-sm-2").form-label
 					| Email
-				input(name='email' type='text' class="col-sm-10" placeholder='Just in case I have questions').form-control
+				input(name='email' type='text' class="col-sm-9 col-sm-offset-1" placeholder='Just in case I have questions').form-control
 				br
 				p 
 					| Your five things...
@@ -48,30 +48,30 @@ mixin submission-form(action)
 				br
 				label(for='thing5' class="col-sm-2").form-label
 					| 5
-				input(name='thing5' type='text' class="col-sm-10").form-control				
+				input(name='thing5' type='text' class="col-sm-10").form-control
 
 				button(type='submit')
 					| submit
 				
 
-mixin submission(submission, comments)
+mixin submission(submission, cmntCnt)
 	div.result
 		if data
 		div.result_header
 			div.result_name 
 				| #{submission.name}, #{submission.age}
 			div.result_social.col-sm-3.pull-right
-				ul.sclnav
-					li.twit 
+				ul.sclnav.pull-right
+					li.twit
 						a(href="#1")
-					li.fcbk 
+					li.fcbk
 						a(href="#2")
-					li.plus 
+					li.plus
 						a(href="#3")
-				a.result_leave_comment(href="#myModal", data-toggle="modal" data-submission="#{submission.id}").pull-right
+				a.result_leave_comment.pull-right(href="#commentModal", data-toggle="modal" data-submission="#{submission.id}")
 					| leave a comment
-				p.comment-count.pull-right
-				| comments: #{comments}
+				a.comment-count.result_comments(href="#commentsModal", data-toggle="modal" data-submission="#{submission.id}")
+					| comments: #{submission.comments.length}
 		div.result_location #{submission.location}
 		div.result_answers
 			ul
