--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -8,12 +8,12 @@ include ../mixins/submissions
 block content
 	//-submissions
 	.container: .row
-		section.col-xs-12.col-sm-5.col-md-5.submission
+		section.col-xs-12.col-sm-4.submission
 			.header
 			p 
 				| Please tell me five things about yourself thatyou like. I can't time you, but I'd prefer if youdid this in under a minute. Life is busy.
 			+submission-form()
-		section.col-xs-12.col-sm-6.col-md-6.col-sm-offset-1.results
+		section.col-xs-12.col-sm-7.col-sm-offset-1.results
 			.header
 			if data.submissions.results.length
 				if data.submissions.totalPages > 1
@@ -27,37 +27,35 @@ block content
 				else
 					h4.text-weight-normal Showing #{utils.plural(data.submissions.results.length, '* submission')}.
 			each submission in data.submissions.results
-				- var cmntCnt = 0;
+				- var comments = []
 				each comment in data.comments
 					- if(comment.submission == submission.id)
-						- cmntCnt += 1;
-				+submission(submission, cmntCnt)
+						- comments.push(comment.comment);
+				- submission['comments'] = comments;
+				- console.log(submission.id);
+				- console.log(submission.comments.length);
+				- console.log(submission.comments);
+				+submission(submission)
 						
 			if data.submissions.totalPages > 1
-				ul.pagination
-					if data.submissions.previous
-						li: a(href='?page=' + data.submissions.previous): span.glyphicon.glyphicon-chevron-left
-					else
-						li.disabled: a(href='?page=' + 1): span.glyphicon.glyphicon-chevron-left
+				ul.results_pagination
+					li
+						| page
 					each p, i in data.submissions.pages
 						li(class=data.submissions.currentPage == p ? 'active' : null)
 							a(href='?page=' + (p == '...' ? (i ? data.submissions.totalPages : 1) : p ))= p
-					if data.submissions.next
-						li: a(href='?page=' + data.submissions.next): span.glyphicon.glyphicon-chevron-right
-					else
-						li.disabled: a(href='?page=' + data.submissions.totalPages): span.entypo.glyphicon.glyphicon-chevron-right
 	+comment-modal()
+	+comments-modal()
 
 block js
 	script.
 		jQuery(function($) {
-			
-			var comments = $('#comments');
-			var input = $('.comment-field-input');
-			var submit = comments.find('button[type=submit]');
+			var comments = !{JSON.stringify(data.comments)};
+			var commentsContent = $('#commentsModal .modal-content');
 
 			var commentBtn = $('.result_leave_comment');
 			var commentForm = $('#commentForm');
+			var commentsBtn = $('.result_comments');
 
 			commentBtn.click(function(){
 				var subId = $(this).data('submission');
@@ -68,26 +66,14 @@ block js
 				}).appendTo(commentForm);
 			});
 			
-			// Scroll to comments and focus input field
-			function scrollToComments(e) {
-				
-				e.preventDefault();
-				
-				$('html, body').animate({ scrollTop: comments.offset().top }, 250);
-				
-				input.eq(0).focus();
-			}
-			$('[href="#comments"]').click( scrollToComments );
-			
-			
-			
-			// Check if field has content: enable/disable submit. Disable by default
-			submit.attr('disabled','disabled');
-			input.keyup(function() {
-				if ($.trim($(this).val())) {
-					submit.removeAttr('disabled');
-				} else {
-					submit.attr('disabled','disabled');
+			commentsBtn.click(function(){
+				var subId = $(this).data('submission');
+				console.dir(comments);
+				for (i = 0; i < comments.length; i++) { 
+				    if(comments[i].submission == subId){
+				    	console.log(comments[i].comment);
+				    	commentsContent.append("<p>" + comments[i].comment + "</p><hr />");
+				    };
 				}
 			});
 		});
