--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5859,21 +5859,6 @@ section.submission {
     resize: vertical; }
   section.submission form input[type=radio] {
     height: 14px; }
-  section.submission form button {
-    display: inline-block;
-    background-repeat: no-repeat;
-    background-position: center 0px;
-    border: none;
-    width: 114px;
-    height: 26px;
-    text-indent: -9999px;
-    background-color: #333;
-    padding-left: 20px;
-    background-image: url("/images/btn_submit.png");
-    position: absolute;
-    left: 50%;
-    bottom: 5%;
-    transform: translate(-50%, 0); }
 
 section.results {
   padding: 2.2em 2.2em 0; }
@@ -5892,9 +5877,32 @@ section .pagination {
   color: #777777; }
 
 .modal-content {
-  background-color: #333; }
+  background-color: #333;
+  padding: 2em; }
   .modal-content button.close {
-    color: #fff; }
+    color: #fff;
+    position: relative;
+    top: -1em; }
+
+#commentForm .textbox {
+  width: 100%;
+  height: 6em; }
+
+button.submitBtn {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center 0px;
+  border: none;
+  width: 114px;
+  height: 26px;
+  text-indent: -9999px;
+  background-color: #333;
+  padding-left: 20px;
+  background-image: url("/images/btn_submit.png");
+  position: absolute;
+  left: 50%;
+  bottom: 5%;
+  transform: translate(-50%, 0); }
 
 /*-----------------------------------------------------------------------------------*/
 /*	14.	Survey Results
