--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -50,7 +50,7 @@ mixin submission-form(action)
 					| 5
 				input(name='thing5' type='text' class="col-sm-10").form-control
 
-				button(type='submit')
+				button(type='submit').submitBtn
 					| submit
 				
 
@@ -68,9 +68,9 @@ mixin submission(submission, cmntCnt)
 						a(href="#2")
 					li.plus
 						a(href="#3")
-				a.result_leave_comment.pull-right(href="#commentModal", data-toggle="modal" data-submission="#{submission.id}")
+				a.result_leave_comment.pull-right(href="#pageModal", data-toggle="modal" data-submission="#{submission.id}")
 					| leave a comment
-				a.comment-count.result_comments(href="#commentsModal", data-toggle="modal" data-submission="#{submission.id}")
+				a.comment-count.result_comments(href="#pageModal", data-toggle="modal" data-submission="#{submission.id}")
 					| comments: #{submission.comments.length}
 		div.result_location #{submission.location}
 		div.result_answers
