--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -44,7 +44,10 @@ html
 			div(role="navigation").navbar.navbar-default
 				.container-fluid
 					.navbar-header.col-sm-9
-						a.navbar-brand(href='/') 5Things
+						span.col-xs-12.col-sm-6
+							a.navbar-brand(href='/') 5 Things
+						span.col-xs-12.col-sm-6
+							a.navbar-brand(href='/') A List
 					.col-sm-3
 						ul.nav.navbar-nav.navbar-right
 							each link in navLinks
