--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -16,34 +16,47 @@ body{
 	margin-top: 30px;
 	.navbar{
 		.navbar-header{
-			background-image: url(/images/header.png);
-			background-repeat: no-repeat;
-			background-size: auto 100%;
-			text-indent: -9999px;
+			> span{
+				background-repeat: no-repeat;
+				text-indent: -9999px;
+				background-size: contain;
+				display: inline-block;
+			}
+			> span:first-of-type{
+				background-image: url(/images/header1.png);
+			}
+			> span:last-of-type{
+				background-image: url(/images/header2.png);
+			}
+			// background-image: url(/images/header.png);
+			// background-repeat: no-repeat;
+			// background-size: auto 100%;
+			// text-indent: -9999px;
 		}
 		.navbar-nav{
 			background-image: url(/images/btn_nav_divider.png);
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: auto 100%;
-			width:106px;
+			width:110px;
 			height: 18px;
 			li{
 				text-indent: -9999px;
 				background-repeat: no-repeat;				
 				height: 100%;
-				width: 34px;
+				width: 46%;
+				display: inline-block;
 				&:first-of-type{
 					background-image: url(/images/btn_nav_about.png);
 					background-position: left top;
-					margin-right: 17px;
+					// margin-right: 17px;
 					&:hover, &.active{background-position: left bottom;}
 				}
 				&:last-of-type{
 					background-image: url(/images/btn_nav_home.png);
 					background-position: right top;
-					margin-left: 17px;
-					&:hover, &.active{background-position: left bottom;}
+					// margin-left: 17px;
+					&:hover, &.active{background-position: right bottom;}
 				}
 			}
 		}
@@ -60,14 +73,28 @@ section{
 		background-image: url(/images/survey_box.png);
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
-		padding: 2.2em;
+		padding: 2.2em 2.2em 5.2em;
 		.header{background-image: url(/images/submission_header.png);}
 		form{
-			.form-control:focus{
-				border-color: red;
-			    outline: 0;
-			    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(139,0,0, 0.6);
-			    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(139,0,0, 0.6);
+			.form-control{
+				display: inline-block;
+			    height: 30px;
+			    padding: 6px 12px;
+			    font-size: 14px;
+			    line-height: 1.42857;
+			    color: #555555;
+			    background-color: #fff;
+			    background-image: none;
+			    border: 1px solid #ccc;
+			    border-radius: 4px;
+			    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+			    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+				.form-control:focus{
+					border-color: red;
+				    outline: 0;
+				    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(139,0,0, 0.6);
+				    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(139,0,0, 0.6);
+				}
 			}
 			p{
 				height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
@@ -103,7 +130,10 @@ section{
 		font-size: 12px;
 		li{
 			display:inline-block;
-			a{color:#fff;}
+			a{
+				color:#fff;
+				margin: 0em 0.2em;
+			}
 		}
 	}	
 }
@@ -167,6 +197,7 @@ li.active a{text-decoration: underline;}
 	font-size: 1.2em;
 	font-family: sans-serif;
 	font-weight: lighter;
+	text-transform: capitalize;
 	padding-top: .2em;
 	padding-right: 10px;
 }
@@ -190,6 +221,7 @@ li.active a{text-decoration: underline;}
 }
 
 .result_location {
+	text-transform: capitalize;
 	clear: both;
 	padding-top: .2em;
 	background-color: #333;
@@ -200,6 +232,13 @@ li.active a{text-decoration: underline;}
 	width: 100%;
 	background-color: #333;
 	color: #fff;
+	ul{
+		padding-left: 0px;
+		@media only screen and (min-width : 768px) {
+			padding-left: 0px;
+		}
+
+	}
 }
 
 .result_answers ul li {
@@ -228,18 +267,6 @@ a.comment-count.result_comments{
 /*-----------------------------------------------------------------------------------*/
 /*	15.Sprites
 /*-----------------------------------------------------------------------------------*/
-#nav {
-    width: 103px; height: 18px;
-    background: url('/images/btn_about_home.png') top left ;
-    margin: 10px auto; padding: 0;
-    position: relative;}
-      
-#nav ul {
-	margin: 0; padding: 0; list-style: none;
-	position: absolute; top: 0;}
-
-#nav li, #nav a {
-    height: 18px; display: block;}
 
 #abt {left: 0px; width: 35px;}
 #hme {left: 35px; width:35px;}
