--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -1,72 +1,71 @@
 mixin submission-form(action)
 	form(method='post', style="margin-bottom: 40px;" id="submissionForm")
 		input(type='hidden', name='action', value='submission.create')
-		.media
-			.media-body
-				label(for='name' class="col-sm-2").form-label
-					| Name 
-					span.error.hidden *
-				input(name='name' type='text' class="col-sm-9 col-sm-offset-1" placeholder='We can be on a first name basis...').form-control
-				br
-				p 
-					| Is this your real name?
-				label(for='Yes').form-label
-					| Yes				
-					span.error.hidden *
-				input(type="radio" name="realName" value="1" ).form-control
-				label(for='no').form-label
-					| No
-					span.error.hidden *
-				input(type="radio" name="realName" value="0" ).form-control
-				br
-				label(for='location' class="col-sm-2").form-label
-					| Where
-					span.error.hidden *
-				input(name='location' type='text' class="col-sm-9 col-sm-offset-1" placeholder='City, State, Country').form-control
-				br
-				label(for='age' class="col-sm-2").form-label
-					| Age
-					span.error.hidden *
-				input(name='age' type='text' class="col-sm-9 col-sm-offset-1").form-control
-				br
-				label(for='email' class="col-sm-2").form-label
-					| Email
-					span.error.hidden *
-				input(name='email' type='text' class="col-sm-9 col-sm-offset-1" placeholder='Just in case I have questions').form-control
-				br
-				p 
-					| Your five things...
-				label(for='thing1' class="col-sm-2" ).form-label
-					| 1
-					span.error.hidden *
-				input(name='thing1' type='text' class="col-sm-10").form-control
-				br
-				label(for='thing2' class="col-sm-2").form-label
-					| 2
-					span.error.hidden *
-				input(name='thing2' type='text' class="col-sm-10").form-control
-				br
-				label(for='thing3' class="col-sm-2").form-label
-					| 3
-					span.error.hidden *
-				input(name='thing3' type='text' class="col-sm-10").form-control
-				br
-				label(for='thing4' class="col-sm-2").form-label
-					| 4
-					span.error.hidden *
-				input(name='thing4' type='text' class="col-sm-10").form-control
-				br
-				label(for='thing5' class="col-sm-2").form-label
-					| 5
-					span.error.hidden *
-				input(name='thing5' type='text' class="col-sm-10").form-control
+		label(for='name' class="col-xs-3 col-sm-2").form-label
+			| Name 
+			span.error.hidden *
+		input(name='name' type='text' class="col-xs-8 col-sm-9 col-sm-offset-1" placeholder='We can be on a first name basis...').form-control
+		br
+		p 
+			| Is this your real name?
+		div
+			label(for='Yes').form-label
+				| Yes				
+				span.error.hidden *
+			input(type="radio" name="realName" value="1" ).form-control
+			label(for='no').form-label
+				| No
+				span.error.hidden *
+			input(type="radio" name="realName" value="0" ).form-control
+		br
+		label(for='location' class="col-xs-3 col-sm-2").form-label
+			| Where
+			span.error.hidden *
+		input(name='location' type='text' class="col-xs-8 col-sm-9 col-sm-offset-1" placeholder='City, State, Country').form-control
+		br
+		label(for='age' class="col-xs-3 col-sm-2").form-label
+			| Age
+			span.error.hidden *
+		input(name='age' type='text' class="col-xs-8 col-sm-9 col-sm-offset-1").form-control
+		br
+		label(for='email' class="col-xs-3 col-sm-2").form-label
+			| Email
+			span.error.hidden *
+		input(name='email' type='text' class="col-xs-8 col-sm-9 col-sm-offset-1" placeholder='Just in case I have questions').form-control
+		br
+		p 
+			| Your five things...
+		label(for='thing1' class="col-xs-3 col-sm-2" ).form-label
+			| 1
+			span.error.hidden *
+		input(name='thing1' type='text' class="col-sm-10").form-control
+		br
+		label(for='thing2' class="col-xs-3 col-sm-2").form-label
+			| 2
+			span.error.hidden *
+		input(name='thing2' type='text' class="col-sm-10").form-control
+		br
+		label(for='thing3' class="col-xs-3 col-sm-2").form-label
+			| 3
+			span.error.hidden *
+		input(name='thing3' type='text' class="col-sm-10").form-control
+		br
+		label(for='thing4' class="col-xs-3 col-sm-2").form-label
+			| 4
+			span.error.hidden *
+		input(name='thing4' type='text' class="col-sm-10").form-control
+		br
+		label(for='thing5' class="col-xs-3 col-sm-2").form-label
+			| 5
+			span.error.hidden *
+		input(name='thing5' type='text' class="col-sm-10").form-control
 
-				button(type='submit').submitBtn
-					| submit
+		button(type='submit').submitBtn
+			| submit
 				
 
 mixin submission(submission, cmntCnt)
-	div.result.col-sm-9
+	div.result.col-xs-8.col-sm-9
 		div.result_header
 			div.result_name 
 				| #{submission.name}, #{submission.age}
@@ -83,15 +82,15 @@ mixin submission(submission, cmntCnt)
 					| 4. #{submission.thing4}
 				li 
 					| 5. #{submission.thing5}
-	div.col-sm-3
+	div.col-xs-3
 		div.result_social
 			ul.sclnav
 				li.twit
-					a(href="#1")
+					a(href="https://twitter.com/share?url="+ url +"&text=This%20is%20five%20kinds%20of%20awesome:&count=none/" target="_blank")
 				li.fcbk
-					a(href="#2")
+					a(href="ttps://www.facebook.com/sharer.php?u=<"+ url +">" target="_blank")
 				li.plus
-					a(href="#3")
+					a(href="https://plusone.google.com/_/+1/confirm?hl=en&url="+url  target="_blank")
 		a.result_leave_comment(href="#pageModal", data-toggle="modal" data-submission="#{submission.id}")
 			| leave a comment
 		a.comment-count.result_comments(href="#pageModal", data-toggle="modal" data-submission="#{submission.id}")
