adding changes to about page and adjustments for real content

--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -72,8 +72,7 @@ mixin submission(submission, cmntCnt)
 		div.result_location #{submission.location}
 		div.result_answers
 			ul
-				li 
-					| 1. #{submission.thing1}
+				li 1. #{submission.thing1}
 				li 
 					| 2. #{submission.thing2}
 				li 
