--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -8,11 +8,11 @@ include ../mixins/submissions
 block content
 	//-submissions
 	.container: .row
-		section.col-xs-12.col-sm-5.col-md-4.submission
+		section.col-sm-6.col-md-4.submission
 			.header
 			p Please tell me five things about yourself thatyou like. I can't time you, but I'd prefer if youdid this in under a minute. Life is busy.
 			+submission-form()
-		section.col-xs-12.col-sm-7.col-md-offset-1.results
+		section.col-xs-12.col-sm-6.col-lg-7.col-lg-offset-1.results
 			.header
 			if data.submissions.results.length
 				if data.submissions.totalPages > 1
@@ -31,9 +31,6 @@ block content
 					- if(comment.submission == submission.id)
 						- comments.push(comment.comment);
 				- submission['comments'] = comments;
-				- console.log(submission.id);
-				- console.log(submission.comments.length);
-				- console.log(submission.comments);
 				+submission(submission)
 						
 			if data.submissions.totalPages > 1
