--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -1,67 +1,53 @@
 mixin submission-form(action)
 	form(method='post', style="margin-bottom: 40px;" id="submissionForm")
 		input(type='hidden', name='action', value='submission.create')
-		label(for='name' class="col-xs-3 col-sm-2").form-label
-			| Name 
+		label(for='name' class="col-xs-3 col-sm-2").form-label Name 
 			span.error.hidden *
 		input(name='name' type='text' class="col-xs-8 col-sm-9 col-sm-offset-1" placeholder='We can be on a first name basis...').form-control
 		br
-		p 
-			| Is this your real name?
+		p  Is this your real name?
 		div
-			label(for='Yes').form-label
-				| Yes				
+			label(for='Yes').form-label Yes
 				span.error.hidden *
 			input(type="radio" name="realName" value="1" ).form-control
-			label(for='no').form-label
-				| No
+			label(for='no').form-label No
 				span.error.hidden *
 			input(type="radio" name="realName" value="0" ).form-control
 		br
-		label(for='location' class="col-xs-3 col-sm-2").form-label
-			| Where
+		label(for='location' class="col-xs-3 col-sm-2").form-label Where
 			span.error.hidden *
 		input(name='location' type='text' class="col-xs-8 col-sm-9 col-sm-offset-1" placeholder='City, State, Country').form-control
 		br
-		label(for='age' class="col-xs-3 col-sm-2").form-label
-			| Age
+		label(for='age' class="col-xs-3 col-sm-2").form-label Age
 			span.error.hidden *
 		input(name='age' type='text' class="col-xs-8 col-sm-9 col-sm-offset-1").form-control
 		br
-		label(for='email' class="col-xs-3 col-sm-2").form-label
-			| Email
+		label(for='email' class="col-xs-3 col-sm-2").form-label Email
 			span.error.hidden *
 		input(name='email' type='text' class="col-xs-8 col-sm-9 col-sm-offset-1" placeholder='Just in case I have questions').form-control
 		br
-		p 
-			| Your five things...
-		label(for='thing1' class="col-xs-3 col-sm-2" ).form-label
-			| 1
+		p Your five things...
+		label(for='thing1' class="col-xs-3 col-sm-2" ).form-label 1
 			span.error.hidden *
 		input(name='thing1' type='text' class="col-sm-10").form-control
 		br
-		label(for='thing2' class="col-xs-3 col-sm-2").form-label
-			| 2
+		label(for='thing2' class="col-xs-3 col-sm-2").form-label 2
 			span.error.hidden *
 		input(name='thing2' type='text' class="col-sm-10").form-control
 		br
-		label(for='thing3' class="col-xs-3 col-sm-2").form-label
-			| 3
+		label(for='thing3' class="col-xs-3 col-sm-2").form-label 3
 			span.error.hidden *
 		input(name='thing3' type='text' class="col-sm-10").form-control
 		br
-		label(for='thing4' class="col-xs-3 col-sm-2").form-label
-			| 4
+		label(for='thing4' class="col-xs-3 col-sm-2").form-label 4
 			span.error.hidden *
 		input(name='thing4' type='text' class="col-sm-10").form-control
 		br
-		label(for='thing5' class="col-xs-3 col-sm-2").form-label
-			| 5
+		label(for='thing5' class="col-xs-3 col-sm-2").form-label 5
 			span.error.hidden *
 		input(name='thing5' type='text' class="col-sm-10").form-control
 
-		button(type='submit').submitBtn
-			| submit
+		button(type='submit').submitBtn submit
 				
 
 mixin submission(submission, cmntCnt)
@@ -73,14 +59,10 @@ mixin submission(submission, cmntCnt)
 		div.result_answers
 			ul
 				li 1. #{submission.thing1}
-				li 
-					| 2. #{submission.thing2}
-				li 
-					| 3. #{submission.thing3}
-				li 
-					| 4. #{submission.thing4}
-				li 
-					| 5. #{submission.thing5}
+				li 2. #{submission.thing2}
+				li 3. #{submission.thing3}
+				li 4. #{submission.thing4}
+				li 5. #{submission.thing5}
 	div.col-xs-3
 		div.result_social
 			ul.sclnav
