--- a/templates/mixins/submissions.jade
+++ b/templates/mixins/submissions.jade
@@ -50,7 +50,7 @@ mixin submission-form(action)
 		button(type='submit').submitBtn submit
 				
 
-mixin submission(submission, cmntCnt)
+mixin submission(submission, url)
 	div.result.col-xs-8.col-sm-9
 		div.result_header
 			div.result_name 
@@ -69,8 +69,9 @@ mixin submission(submission, cmntCnt)
 				li.twit
 					a(href="https://twitter.com/share?url="+ url +"&text=This%20is%20five%20kinds%20of%20awesome:&count=none/" target="_blank")
 				li.fcbk
-					a(href="ttps://www.facebook.com/sharer.php?u=<"+ url +">" target="_blank")
+					a(href="#" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='"+ url +",'facebook-share-dialog','width=626,height=436');return false;" target="_blank")
 				li.plus
 					a(href="https://plusone.google.com/_/+1/confirm?hl=en&url="+url  target="_blank")
 		a.result_leave_comment(href="#pageModal", data-toggle="modal" data-submission="#{submission.id}") leave a comment
 		a.comment-count.result_comments(href="#pageModal", data-toggle="modal" data-submission="#{submission.id}") comments: #{submission.comments.length}
+
